fixed sidebar stretching

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ main img {
 
 .content-sidebar-container {
     display:flex;
+    align-items: start;
     gap: 2rem;
 }
 
